# rustac

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: audit.yml  ci.yml
rustac-core/: Cargo.toml  LICENSE  README.md
rustac-core/src/: error.rs  lib.rs  types.rs  validation.rs
rustac-core/src/types/: catalog.rs  collection.rs  common.rs  item.rs  item_collection.rs
rustac-core/src/validation/: schema.rs  util.rs  validate.rs
rustac-core/stac-core/: Cargo.toml
rustac-core/stac-core/src/: error.rs  lib.rs  validation.rs
rustac-core/stac-core/src/types/: catalog.rs  collection.rs  common.rs  item.rs
rustac-core/stac-core/tests/: helpers.rs  test_item.rs
rustac-core/stac-core/tests-data/extensions/scientific/: collection.json
rustac-core/stac-linked/: Cargo.toml
rustac-core/stac-linked/src/: lib.rs
rustac-core/stac-reader/: Cargo.toml
rustac-core/stac-reader/src/: error.rs
rustac-core/stac-types/: Cargo.toml  README.md
rustac-core/stac-types/src/: asset.rs  catalog.rs  collection.rs  common_metadata.rs  error.rs  item.rs  item_collection.rs  lib.rs  lib_tests.rs  link.rs  provider.rs  validation.rs
rustac-core/stac-types/src/extensions/: eo.rs  projection.rs  view.rs
rustac-core/stac-types/src/types/: collection.rs  item.rs
rustac-core/stac-validate/: Cargo.toml
rustac-core/stac-validate-derive/src/: lib.rs
rustac-core/stac-validate/src/: error.rs  lib.rs  schema.rs  types.rs  util.rs  validation.rs
rustac-core/stac-validate/tests/: test_item_validate.rs
rustac-core/tests/: helpers.rs  test_catalog.rs  test_collection.rs  test_item.rs
rustac-validate/: .gitmodules  Cargo.toml  README.md
rustac-validate/src/: error.rs  lib.rs  util.rs  validation.rs
rustac-validate/src/extensions/: projection.rs  scientific.rs
rustac-validate/stac-core/: Cargo.toml  README.md
rustac-validate/stac-core/src/: error.rs  lib.rs  types.rs
rustac-validate/stac-core/src/types/: catalog.rs  collection.rs  common.rs  item.rs
rustac-validate/stac-core/tests/: test_catalog.rs  test_collection.rs
rustac-validate/stac-core/tests-data/extensions/scientific/: item.json
rustac-validate/stac-linked/src/: linked.rs
rustac-validate/stac-reader/src/: io.rs  lib.rs  types.rs
rustac-validate/stac-types/src/: asset.rs  catalog.rs  collection.rs  common_metadata.rs  error.rs  extensions.rs  item.rs  item_collection.rs  lib.rs  link.rs  provider.rs  types.rs  validation.rs
rustac-validate/stac-types/src/extensions/: projection.rs  scientific.rs  view.rs
rustac-validate/stac-types/src/types/: catalog.rs  item_collection.rs
rustac-validate/stac-types/src/validation/: util.rs  validate.rs
rustac-validate/stac-types/tests-data/: full-link.json
rustac-validate/stac-validate/: Cargo.toml
rustac-validate/stac-validate-derive/: Cargo.toml
rustac-validate/stac-validate/src/: error.rs  lib.rs  schema.rs  util.rs  validate.rs  validation.rs
rustac-validate/stac-validate/tests/: helpers.rs  test_catalog_validate.rs  test_collection_validate.rs  test_item_validate.rs
rustac-validate/stac-validate/tests-data/: simple-item.json
rustac-validate/stac-validate/tests-data/extensions/view/: item.json
rustac-validate/tests/: helpers.rs  test_catalog_validate.rs  test_collection_validate.rs  test_item_validate.rs  validate_core_examples.rs  validate_extension_examples.rs
rustac-validate/tests-data/: extended-item.json
rustac-validate/tests/stac-examples/: scientific  stac-spec
