[package]
name = "rustac-validate"
version = "0.1.0"
authors = ["Jon Duckworth <duckontheweb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustac-core = { version = "0.1", path = "../rustac-core" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
jsonschema = { version = "^0.6.1", features = ["reqwest"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
semver = { version = "0.11", features = ["serde"] }
