[package]
name = "stac-core"
version = "0.1.0"
authors = ["Jon Duckworth <duckontheweb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
geojson = { version = "0.22", features = ["geo-types"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "0.11", features = ["serde"] }