[package]
name = "stac-core"
version = "0.1.0"
authors = ["Jon Duckworth <duckontheweb@gmail.com>"]
homepage = "https://github.com/duckontheweb/rustac/stac-core"
repository = "https://github.com/duckontheweb/rustac"
description = "Rust library for working with the SpatioTemporal Asset Catalog (STAC)"
categories = ["data-structures"]
keywords = ["stac"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]
default-features = false

[dependencies.geojson]
version = "0.22"
features = ["geo-types"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.serde_json]
version = "1.0"
default-features = false

[dependencies.semver]
version = "0.11"
features = ["serde"]
default-features = false
