[package]
name = "stac-types"
version = "0.1.0"
authors = ["Jon Duckworth <duckontheweb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geojson = { version = "0.22", features = ["geo-types"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = { version = "^0.6.1", features = ["reqwest"], optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }

[features]
validate = ["jsonschema", "reqwest"]
