[package]
name = "stac-validate"
version = "0.1.0"
authors = ["Jon Duckworth <duckontheweb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = { version = "^0.6.1", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
semver = { version = "0.11", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
stac-types = { path = "../stac-types" }
